# CompressorLib

./: CMakeLists.txt
Lib/: CMakeLists.txt
Lib/include/: Bitmap.h  Combit.h  Compressor.h  Constants.h  File.h
Lib/src/: Bitmap.cpp  Combit.cpp  Compressor.cpp  File.cpp
src/: main.cpp
